<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragment.LoginFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@null"
        android:orientation="vertical"
        android:padding="@dimen/fragment_login_ll_padding"
        android:weightSum="1"
        android:clickable="true">
        <ImageView
            android:layout_width="?attr/logoWidth"
            android:layout_height="?attr/logoHeight"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="?attr/applicationLogo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="5dp"
            android:textSize="24dp"
            android:text="@string/login_text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_name_layout"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:background="@color/textBackgroundColor"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_login_edittext_height"
                android:background="@color/textBackgroundColor"
                android:paddingLeft="@dimen/fragment_login_edittext_padding_left"
                style="@style/LoginTextStyle"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textBackgroundColor"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_login_edittext_height"
                android:background="@color/textBackgroundColor"
                android:paddingLeft="@dimen/fragment_login_edittext_padding_left"
                style="@style/LoginTextStyle"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/password_hint"
                android:drawablePadding="@dimen/fragment_login_edittext_drawable_padding"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <include layout="@layout/horizontal_divider" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/fragment_login_btn_height"
            android:layout_marginTop="@dimen/fragment_login_btn_margintop"
            android:background="@drawable/bottom_screen_button"
            android:fontFamily="sans-serif-light"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/fragment_login_btn_textsize"
            android:layout_weight="0.05" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Forgot password ?"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/fragment_login_tv_margintop"
                android:layout_marginBottom="@dimen/fragment_login_tv_marginbot"
                android:paddingTop="@dimen/fragment_login_tv_paddingtop"
                android:paddingBottom="@dimen/fragment_login_tv_paddingbot"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/fragment_login_tv_textsize" />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Register"
                android:layout_marginTop="@dimen/fragment_login_tv_margintop"
                android:layout_marginBottom="@dimen/fragment_login_tv_marginbot"
                android:paddingTop="@dimen/fragment_login_tv_paddingtop"
                android:paddingBottom="@dimen/fragment_login_tv_paddingbot"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/fragment_login_tv_textsize" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
